--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,20 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css" >
 	<link rel="stylesheet" type="text/css" href="css/main.css" >
 	<link rel="apple-touch-icon" href="favicon.png"/>
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
+	<script src="js/jquery-2.0.3.min.js"></script>
+	<script src="js/api.js"></script>
+	<link href="http://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet" type="text/css">
+	<script type="text/javascript">
+
+    $(document).ready(function()
+      {
+         $(".facebook-login").click(function()
+         {
+            NativeView.openFacebookLogin();
+         });
+      });
+  
+	</script>
 </head>
  
 <body>
@@ -20,7 +33,7 @@
 					<h1>Putzgrila!</h1>
 				</div>
 				<div id="login">
-					<button class="facebook-login" onclick="location.href='atividade.html';">Login com o Facebook</button>
+					<button class="facebook-login">Login com o Facebook</button>
 					<div class="login-divider">
 						<p class="">ou</p>
 					</div>	
